chore(shuffle): use clamp from Math class